# rez-tools

./: .gitignore  .travis.yml  Cargo.toml  DEPLOYMENT_GUIDE.md  DISTRIBUTION_IMPLEMENTATION_SUMMARY.md  README-rust.md  README.md  RUST_MIGRATION_SUMMARY.md  dev-requirements.txt  install.ps1  install.sh  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
examples/: cmake-gui.rt  cmake_gui.rt  conan_python2.rt  conan_python3.rt  python.rt  reztoolsconfig.py  reztoolsconfig.toml  rust_test.rt  test_simple.rt
python/: README.md  pyproject.toml
python/rez_tools/: __init__.py  cli.py  core.py
rez_tools/: __init__.py  __main__.py  cli.py  plugin.py  reztoolsconfig.py  template.py
rez_tools/test/: test_file_operator.py
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/config/: loader.rs  mod.rs
src/platform/: detection.rs  download.rs  extract.rs  installer.rs  mod.rs  python_standalone.rs  rez_path.rs
src/plugin/: mod.rs  parser.rs  scanner.rs
src/rez/: executor.rs  mod.rs
tests/: integration_tests.rs
tools/: reztoolsconfig.py
